--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,4 @@
-#root {
+:global #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -10,12 +10,24 @@
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+
+  &:hover {
+    filter: drop-shadow(0 0 2em #646cffaa);
+  }
+
+  &.react {
+    &:hover {
+      filter: drop-shadow(0 0 2em #61dafbaa);
+    }
+  }
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+
+.card {
+  padding: 2em;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.readTheDocs {
+  color: #888;
 }
 
 @keyframes logo-spin {
@@ -28,15 +40,11 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  a {
+    &:nth-of-type(2) {
+      .logo {
+        animation: logo-spin infinite 20s linear;
+      }
+    }
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
