--- a/src/pages/Intro/Intro.module.scss
+++ b/src/pages/Intro/Intro.module.scss
@@ -1,10 +1,3 @@
-:global #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -23,7 +16,7 @@
 }
 
 .card {
-  padding: 2em;
+  padding: 2em 0;
 }
 
 .readTheDocs {
