try zustand as non-api-request state management

--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -9,6 +9,7 @@
   position: fixed;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   height: 36px;
   width: 100%;
   padding: 0 12px;
@@ -32,7 +33,7 @@
 .footer {
   display: flex;
   align-items: center;
-  place-content: end;
+  justify-content: end;
   height: 36px;
   padding: 0 12px;
   font-size: 12px;
